# uav_mission_env

./: LICENSE  README.md  debug_schema_utils.ipynb  pyproject.toml  run_custom_mission.py  setup.py
uav_mission_env/: __init__.py  environment.py  state_manager.py
uav_mission_env/configs/: __init__.py  all_tools.yaml  demo_mission_h_count.yaml  minimal_viable_states.yaml  mission_presampled.yaml  new_tools.yaml  tasks.yaml
uav_mission_env/data/demo/: metadata.json
uav_mission_env/data/synthetic_dataset/: metadata.json
uav_mission_env/missions/: __init__.py  mission.py  mission_generator.py  mission_manager.py  task.py  waypoint.py
uav_mission_env/observations/: observation.py
uav_mission_env/tools/: __init__.py  observation_tool.py  tool.py  tool_manager.py  tool_validator.py  verifiers.py
uav_mission_env/utils/: __init__.py  augmentations_utils.py  config_loader.py  media_utils.py  schema_utils.py
