[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uav_mission_env"
version = "0.1.2"
description = "A Python package for UAV mission environments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "KingJulien0709"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/KingJulien0709/uav_mission_env"
Repository = "https://github.com/KingJulien0709/uav_mission_env"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
uav_mission_env = [
    "configs/*.yaml",
    "data/synthetic_dataset/*.json",
    "data/synthetic_dataset/*.jpg"
]
